Fixed CSS alignment, still WIP need to adjust bottom of input box

--- a/src/App.css
+++ b/src/App.css
@@ -48,19 +48,20 @@ html {
   display: flex;
 }
 .margarine {
-  margin: 10%;
+  margin-left: 5%;
+  margin-top: 10%;
 }
 .modifier {
-  
-  margin: 5%;
+  display: inline;
+  margin-left: 8px;
 }
 .statBlock {
-  display: flex;
-  justify-content: space-around;
+  display: block;
   min-height: 2.5em;
   min-width: 25%;
+  align-items: baseline;
 }
 .userInput {
-  height: 1em;
-  /* float: right; */
+  height: 2em;
+  width: 25px;
 }
